Fix readability of active nav in dropdowns

--- a/vroom_car_share/static/css/style.css
+++ b/vroom_car_share/static/css/style.css
@@ -83,9 +83,9 @@
 }
 
 /* Top Navbar */
-ul.nav.navbar-nav li a {
-    color: black;
-}
+/*ul.nav.navbar-nav li a {*/
+    /*color: black;*/
+/*}*/
 
 ul.nav.navbar-nav li a:hover {
     color: #3399cc;
